# Blog_Comment_System

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.envs/: .django  .postgres
application/: manage.py
application/comments/: admin.py  models.py
application/comments/api/: serializers.py  views.py
application/comments/migrations/: 0001_initial.py  0002_alter_comment_level_alter_comment_lft_and_more.py  0003_alter_comment_options_and_more.py
application/config/: api_routers.py  urls.py
application/config/settings/: __init__.py
application/config/settings/components/: apps.py  base.py  database.py  drf.py  logger.py  other.py
application/fixtures/: init.json
application/posts/: admin.py  models.py
application/posts/api/: serializers.py  views.py
application/posts/migrations/: 0001_initial.py  0002_alter_post_image.py
compose/django/: Dockerfile  start
compose/postgres/: Dockerfile
